@@ -19,7 +19,7 @@ class Hybrid_Providers_Facebook extends Hybrid_Provider_Model {
 	 * default permissions, and a lot of them. You can change them from the configuration by setting the scope to what you want/need
 	 * {@inheritdoc}
 	 */
-	public $scope = "email, user_about_me, user_birthday, user_hometown, user_location, user_website, read_stream, publish_actions, read_custom_friendlists";
+	public $scope = "email, user_about_me, user_birthday, user_hometown, user_location, user_website, publish_actions, read_custom_friendlists";
 
 	/**
 	 * Provider API client
